Adding back docker compose file as well

--- a/DotNetCoreSample/Dockerfile
+++ b/DotNetCoreSample/Dockerfile
@@ -1,11 +1,19 @@
-FROM microsoft/dotnet:2.0-sdk
+FROM microsoft/dotnet:2.0-runtime-nanoserver-sac2016 AS base
 WORKDIR /app
 
-# copy csproj and restore as distinct layers
-COPY *.csproj ./
+FROM microsoft/dotnet:2.0-sdk-nanoserver-sac2016 AS build
+WORKDIR /src
+COPY *.sln ./
+COPY DotNetCoreSample/DotNetCoreSample.csproj DotNetCoreSample/
 RUN dotnet restore
+COPY . .
+WORKDIR /src/DotNetCoreSample
+RUN dotnet build -c Release -o /app
 
-# copy and build everything else
-COPY . ./
-RUN dotnet publish -c Release -o out
-ENTRYPOINT ["dotnet", "out/DotNetCoreSample.dll"]
+FROM build AS publish
+RUN dotnet publish -c Release -o /app
+
+FROM base AS final
+WORKDIR /app
+COPY --from=publish /app .
+ENTRYPOINT ["dotnet", "DotNetCoreSample.dll"]
